css/master.css
/* --- Layout stuff --- */
.content-wrapper {
  display: flex;
  background-color: #3B3B3B;
  z-index: -9999;
}

.layout-item{
  display: flex;
  align-items: center;
  justify-content: center;
}

.layout-wrapper {
  flex-grow: 1;
  flex-direction: column;
  margin: 80px 0;
}

.group-wrapper {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 80%;
  max-width: 520px;
  justify-content: center;
  align-items: center;
  margin: 3rem 0;
}

.picture {
  display: flex;
  position: relative;
  right: 15px;
}

.picture-image-wrapper {
  display: inline-grid;
  position: relative;
  bottom: 27px;
  left: 30px;
  z-index: 1;
  box-shadow: -5px 5px 10px 0px rgba(0, 0, 0, 0.25);
}

.picture-image {
  object-fit: cover;
  width: 100%;
}

.picture-background {
  position: absolute;
  display: flex;
  width: 100%;
  height: 100%;
  align-items: flex-end;
  justify-content: flex-end;

  background-color: #B9B4B4;
}

/* --- Layout stuff --- */

.group-title {
  font-family: "Montserrat", sans-serif;
  font-weight: normal;
  width: 100%;
  font-size: 20px;
  margin: 15px 0;
  color: #FFF;
}

.group-description {
  margin: 0;
  font-family: "Open Sans", sans-serif;
  font-size: 14px;
  line-height: 21px;
  color: #FFF;
}

@keyframes glitch {
  0% {
      transform: translate(0)
  }
  20% {
      transform: translate(-2px, 2px)
  }
  40% {
      transform: translate(-2px, -2px)
  }
  60% {
      transform: translate(2px, 2px)
  }
  80% {
      transform: translate(2px, -2px)
  }
  to {
      transform: translate(0)
  }
}

.name-glitch.active::before {
  display: block;
  content: "Matheus Correia";
  color: #0FF;
  position: absolute;
  animation: glitch .3s cubic-bezier(.25, .46, .45, .94) both infinite;
  z-index: -1;
}

.name-glitch.active::after {
  display: block;
  content: "Matheus Correia";
  color: #f0f;
  position: absolute;
  top: 0;
  animation: glitch .3s cubic-bezier(.25, .46, .45, .94) reverse both infinite;
  z-index: -1;
}

.name-glitch {
  position: relative;
  margin: 1rem;
  font-family: "Montserrat", sans-serif;
  color: #FFF;
  letter-spacing: 10px;
  font-weight: normal;
  font-size: 2.5rem;
  align-self: flex-start;
  text-align: center;
  z-index: 0;

  cursor: none;

  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.picture-credits {
  font-family: "Open Sans", sans-serif;
  color: #FFF;
  font-size: 13px;
  padding: 5px 10px;
}

.picture-links {
  color: #777777;
  text-decoration: none;
}

.link-wrapper {
  flex-grow: 1;
  display: flex;
  justify-content: space-around;
  align-items: flex-end;
  margin: 0 50px;
  flex-wrap: wrap;
}

.icon-link {
  margin: 10px;
}


@media only screen and (min-width: 1024px) {

  /* --- Layout stuff --- */
  .group-wrapper {
    padding: 0 8rem;
  }

  .layout-wrapper {
    display: grid;
    grid-template-columns: [left-column] 1fr [right-column] 1fr;
    grid-template-rows: repeat(7, 150px);
    grid-gap: 15px;
  }

  .layout-item.name {
    grid-column: right-column;
    grid-row: span 1;
  }

  .layout-item.coder {
    grid-column: left-column;
    grid-row: 1 / span 3;
  }

  .layout-item.musician {
    grid-column: right-column;
    grid-row: 2 / span 6;
  }

  .layout-item.creative {
    grid-column: left-column;
    grid-row: 5 / span 3;
  }

  .layout-item.links {
    grid-column: right-column;
    grid-row: 7 / span 1;
  }
  /* --- Layout stuff --- */
}

